@@ -9,6 +9,8 @@ make sure you have a link from npg_qc_viewer/root/static/scripts to bcviz
 for example
 ln -s /nfs/users/nfs_j/js10/npg/bcviz/js/src npg_qc_viewer/root/static/scripts/bcviz
 
+If needed, edit the decryption_key value in npg_qc_viewer.conf
+
 # in the npg_qc_viewer directory
 perl bin/npg_qc_viewer_server.pl -p YOUR_PORT
 
@@ -33,6 +35,3 @@ perl Build.PL
 CATALYST_DEBUG=0 TEST_AUTHOR=1 ./Build test
 or
 CATALYST_DEBUG=0  TEST_AUTHOR=1 prove -vl t
-
-
-
